manifests/yamls/clair.yaml
# Source: clair/templates/secret.yaml
apiVersion: v1
kind: Secret
metadata:
  name: clair
  labels:
    release: "devtron"
    chart: "clair-0.1.2"
    app: clair
type: Opaque
data:
  config.yaml: |-
    Y2xhaXI6CiAgZGF0YWJhc2U6CiAgICAjIERhdGFiYXNlIGRyaXZlci4KICAgIHR5cGU6IHBnc3FsCiAgICBvcHRpb25zOgogICAgICAjIFBvc3RncmVTUUwgQ29ubmVjdGlvbiBzdHJpbmcuCiAgICAgICMgaHR0cHM6Ly93d3cucG9zdGdyZXNxbC5vcmcvZG9jcy9jdXJyZW50L3N0YXRpYy9saWJwcS1jb25uZWN0Lmh0bWwjTElCUFEtQ09OTlNUUklORwogICAgICBzb3VyY2U6ICJwb3N0Z3JlczovL2NsYWlyOmNsYWlyQGNsYWlyLXBnLXBvc3RncmVzcWw6NTQzMi9jbGFpcj9zc2xtb2RlPWRpc2FibGUiCiAgICAgIAoKICAgICAgIyBOdW1iZXIgb2YgZWxlbWVudHMga2VwdCBpbiB0aGUgY2FjaGUuCiAgICAgICMgVmFsdWVzIHVubGlrZWx5IHRvIGNoYW5n [...]
---
# Source: clair/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clair
  labels:
    release: "devtron"
    chart: "clair-0.1.2"
    app: clair
    component: clair
spec:
  type: ClusterIP
  ports:
  - name: "clair-api"
    port: 6060
    targetPort: 6060
    protocol: TCP
  - name: "clair-health"
    port: 6061
    targetPort: 6061
    protocol: TCP
  selector:
    app: clair
---
# Source: clair/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clair
  labels:
    release: "devtron"
    chart: "clair-0.1.2"
    app: clair
    component: clair
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clair
  template:
    metadata:
      labels:
        app: clair
        component: clair
    spec:
      volumes:
      - name: "clair-config"
        secret:
          secretName: clair
      initContainers:
      - name: pg-ready-wait
        image: "quay.io/devtron/postgres:11.3"
        command: [ "sh", "-c",
          "until pg_isready -h postgresql-postgresql.devtroncd -p 5432;
          do echo waiting for database; sleep 1; done;"]
      containers:
      - name: clair
        image: "quay.io/coreos/clair:v2.1.7"
        imagePullPolicy: IfNotPresent
        args:
        - "-log-level=info"
        ports:
        - name: "clair-api"
          containerPort: 6060
          protocol: TCP
        - name: "clair-health"
          containerPort: 6061
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /health
            port: 6061
        readinessProbe:
          httpGet:
            path: /health
            port: 6061
        volumeMounts:
        - name: "clair-config"
          mountPath: /etc/clair
          readOnly: true
